Description of your changes

--- a/Public/Home.html
+++ b/Public/Home.html
@@ -35,6 +35,18 @@
 
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<style>
+		.form-group {
+            display: flex;
+            align-items: center;
+        }
+    
+        .form-group input[type="text"] {
+            margin-left: -30px; /* Adjust this value as needed */
+        }
+
+        .form-group button[type="submit"] {
+        margin-top: 20px; /* Adjust this value to move the button down */
+    }
 
 	</style>
 	</head>
@@ -285,171 +297,7 @@
 			</div>
 		</div>
 
-		<div id="fh5co-properties" class="fh5co-section-gray">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h3>Newest Properties</h3>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 animate-box">
-						<div class="property">
-							<a href="#" class="fh5co-property" style="background-image: url(images/property-1.png);">
-								<span class="status">Sale</span>
-								<ul class="list-details">
-									<li>2000 ft sq<li>
-									<li>5 Bedroom:</li>
-									<li>4 Bathroom:</li>
-									<li>3 Garage:</li>
-								</ul>
-							</a>
-							<div class="property-details">
-								<h3>Properties Near in Beach</h3>
-								<span class="price">$3,000</span>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores.</p>
-								<span class="address"><i class="icon-map"></i>Thomas Street, St. Louis, MO 8990, USA</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="property">
-							<a href="#" class="fh5co-property" style="background-image: url(images/property-2.png);">
-								<span class="status">Rent</span>
-								<ul class="list-details">
-									<li>2000 ft sq<li>
-									<li>5 Bedroom:</li>
-									<li>4 Bathroom:</li>
-									<li>3 Garage:</li>
-								</ul>
-							</a>
-							<div class="property-details">
-								<h3>Modern House at NZ</h3>
-								<span class="price">$200/mos</span>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores.</p>
-								<span class="address"><i class="icon-map"></i>Thomas Street, St. Louis, MO 8990, USA</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="property">
-							<a href="#" class="fh5co-property" style="background-image: url(images/property-1.png);">
-								<span class="status">Sale</span>
-								<ul class="list-details">
-									<li>2000 ft sq<li>
-									<li>5 Bedroom:</li>
-									<li>4 Bathroom:</li>
-									<li>3 Garage:</li>
-								</ul>
-							</a>
-							<div class="property-details">
-								<h3>Bonggalo House</h3>
-								<span class="price">$3,000</span>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores.</p>
-								<span class="address"><i class="icon-map"></i>Thomas Street, St. Louis, MO 8990, USA</span>						
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="property">
-							<a href="#" class="fh5co-property" style="background-image: url(images/property-1.png);">
-								<span class="status">Sale</span>
-								<ul class="list-details">
-									<li>2000 ft sq<li>
-									<li>5 Bedroom:</li>
-									<li>4 Bathroom:</li>
-									<li>3 Garage:</li>
-								</ul>
-							</a>
-							<div class="property-details">
-								<h3>Properties at Alaska</h3>
-								<span class="price">$3,000</span>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores.</p>
-								<span class="address"><i class="icon-map"></i>Thomas Street, St. Louis, MO 8990, USA</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="property">
-							<a href="#" class="fh5co-property" style="background-image: url(images/property-2.png);">
-								<span class="status">Rent</span>
-								<ul class="list-details">
-									<li>2000 ft sq<li>
-									<li>5 Bedroom:</li>
-									<li>4 Bathroom:</li>
-									<li>3 Garage:</li>
-								</ul>
-							</a>
-							<div class="property-details">
-								<h3>Modern Properties</h3>
-								<span class="price">$200/mos</span>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores.</p>
-								<span class="address"><i class="icon-map"></i>Thomas Street, St. Louis, MO 8990, USA</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="property">
-							<a href="#" class="fh5co-property" style="background-image: url(images/property-2.png);">
-								<span class="status">Sale</span>
-								<ul class="list-details">
-									<li>2000 ft sq<li>
-									<li>5 Bedroom:</li>
-									<li>4 Bathroom:</li>
-									<li>3 Garage:</li>
-								</ul>
-							</a>
-							<div class="property-details">
-								<h3>House at the Top of Mountain</h3>
-								<span class="price">$3,000</span>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores.</p>
-								<span class="address"><i class="icon-map"></i>Thomas Street, St. Louis, MO 8990, USA</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div id="fh5co-about" class="fh5co-agent">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h3>Our Agents</h3>
-						<p>About our real estate agents.</p>
-					</div>
-				</div>
-					<div class="col-sm-3 text-center animate-box" data-animate-effect="fadeIn" style="margin-bottom: 50px;">
-						<div class="fh5co-staff">
-							<img class="img-responsive" src="images/GIL.png" alt="Free HTML5 Templates by freeHTML5.co" style="margin-bottom: 50px;">
-							<h3>Gil Nissim</h3>
-							<p>Gil Nissim has a lot of knowledge and experience in the business field. Gil has a professional background in the world of business in Israel and abroad, which includes an extensive network of personal connections with the Jewish community in Western Europe. He shares the extensive knowledge he has accumulated over the years in various lectures in the field of business and real estate. Also, he was born in Tel Aviv and grew up and was educated in the northern Tel Aviv area, therefore he also knows very well the needs of the residents of the area and the advantages that the area has to offer.</p>
-							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter2"></i></a>
-								<a href="#"><i class="icon-facebook2"></i></a>
-								<a href="#"><i class="icon-instagram"></i></a>
-								<a href="#"><i class="icon-dribbble2"></i></a>
-								<a href="#"><i class="icon-youtube"></i></a>
-							</p>
-						</div>
-					</div>
-					<div class="col-sm-3 text-center animate-box" data-animate-effect="fadeIn" style="margin-bottom: 50px;">
-						<div class="fh5co-staff">
-							<img class="img-responsive" src="images/OVED.png" alt="Free HTML5 Templates by freeHTML5.co" style="margin-bottom: 50px;">
-							<h3>Oved Zangi</h3>
-							<p>Oved Zangi was in the past a vice president at Zalman Shuval and Shlomo Gropman's Fair Fund and has about 30 years of experience in the real estate field. Among other things, he is the marketing of large and sought-after projects, including the deal for the most expensive penthouse in Israel worth about NIS 80 million, the Yarkon 96 project. Among his biggest clients in the world you can also find the famous Kardashian family. In addition, Oved is an expert in marketing to the Jewish communities abroad and has worked with many countries in the world, including France, Moscow, Germany, the United States, South Africa and other countries in the world.</p>
-							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter2"></i></a>
-								<a href="#"><i class="icon-facebook2"></i></a>
-								<a href="#"><i class="icon-instagram"></i></a>
-								<a href="#"><i class="icon-dribbble2"></i></a>
-								<a href="#"><i class="icon-youtube"></i></a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
+		
 		<div id="fh5co-blog-section" class="fh5co-section-gray">
 			<div class="container">
 				<div class="row">
@@ -492,7 +340,7 @@
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/property-2.png" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/mol.png" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href="#">15% Deal Discount For House</a></h3>
@@ -508,6 +356,47 @@
 				</div>
 			</div>
 		</div>
+	
+
+		<div id="fh5co-about" class="fh5co-agent">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+						<h3>Our Agents</h3>
+						<p>About our real estate agents.</p>
+					</div>
+				</div>
+					<div class="col-sm-3 text-center animate-box" data-animate-effect="fadeIn" style="margin-bottom: 50px;">
+						<div class="fh5co-staff">
+							<img class="img-responsive" src="images/GIL.png" alt="Free HTML5 Templates by freeHTML5.co" style="margin-bottom: 50px;">
+							<h3>Gil Nissim</h3>
+							<p>Gil Nissim has a lot of knowledge and experience in the business field. Gil has a professional background in the world of business in Israel and abroad, which includes an extensive network of personal connections with the Jewish community in Western Europe. He shares the extensive knowledge he has accumulated over the years in various lectures in the field of business and real estate. Also, he was born in Tel Aviv and grew up and was educated in the northern Tel Aviv area, therefore he also knows very well the needs of the residents of the area and the advantages that the area has to offer.</p>
+							<p class="fh5co-social-icons">
+								<a href="#"><i class="icon-twitter2"></i></a>
+								<a href="#"><i class="icon-facebook2"></i></a>
+								<a href="#"><i class="icon-instagram"></i></a>
+								<a href="#"><i class="icon-dribbble2"></i></a>
+								<a href="#"><i class="icon-youtube"></i></a>
+							</p>
+						</div>
+					</div>
+					<div class="col-sm-3 text-center animate-box" data-animate-effect="fadeIn" style="margin-bottom: 50px;">
+						<div class="fh5co-staff">
+							<img class="img-responsive" src="images/OVED.png" alt="Free HTML5 Templates by freeHTML5.co" style="margin-bottom: 50px;">
+							<h3>Oved Zangi</h3>
+							<p>Oved Zangi was in the past a vice president at Zalman Shuval and Shlomo Gropman's Fair Fund and has about 30 years of experience in the real estate field. Among other things, he is the marketing of large and sought-after projects, including the deal for the most expensive penthouse in Israel worth about NIS 80 million, the Yarkon 96 project. Among his biggest clients in the world you can also find the famous Kardashian family. In addition, Oved is an expert in marketing to the Jewish communities abroad and has worked with many countries in the world, including France, Moscow, Germany, the United States, South Africa and other countries in the world.</p>
+							<p class="fh5co-social-icons">
+								<a href="#"><i class="icon-twitter2"></i></a>
+								<a href="#"><i class="icon-facebook2"></i></a>
+								<a href="#"><i class="icon-instagram"></i></a>
+								<a href="#"><i class="icon-dribbble2"></i></a>
+								<a href="#"><i class="icon-youtube"></i></a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		<!-- fh5co-blog-section -->
 		<div id="fh5co-contact">
 			<div class="container">
