--- a/Public/meetingV-Customer.html
+++ b/Public/meetingV-Customer.html
@@ -177,6 +177,19 @@
         .btn1.btn1-default:active {
             border-color: transparent;
         }
+
+        .form-group {
+            display: flex;
+            align-items: center;
+        }
+    
+        .form-group input[type="text"] {
+            margin-left: -30px; /* Adjust this value as needed */
+        }
+
+        .form-group button[type="submit"] {
+        margin-top: 20px; /* Adjust this value to move the button down */
+    }
     </style>
 
 
