--- a/Public/DealsV-Manager.html
+++ b/Public/DealsV-Manager.html
@@ -192,14 +192,11 @@
                         <a>Assets</a>
                         <ul class="fh5co-sub-menu">
                             <li><a href="all-Manager.html">All</a></li>
-                            <li><a href="filter-Manager.html">Filter</a></li>
                             <li><a href="addA-Manager.html">Add</a></li>
                             <li><a href="updateA-Manager.html">Update</a></li>
                         </ul>
                     </li>
-                    <li><a href="users-Manager.html">Users</a></li>
                     <li><a href="addC-Manager.html">Customer</a></li>
-                    <li><a href="blog-Manager.html">Blog</a></li>
                     <!-- New "Deals" tab containing "Deal" and "Deals View" links -->
                     <li>
                         <a>Deals</a>
@@ -208,7 +205,8 @@
                             <li><a href="DealsV-Manager.html">View Deals</a></li>
                         </ul>
                     </li>
-                    <!-- End of "Deals" tab -->
+                    <li><a href="blog-Manager.html">Blog</a></li>
+                    <li><a href="users-Manager.html">Users</a></li>
                     <li>
                         <a>Meetings</a>
                         <ul class="fh5co-sub-menu">
@@ -231,8 +229,8 @@
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
                                 <div class="slider-text-inner">
-                                    <h2 class="heading-title">Meeting</h2>
-                                    <p class="fh5co-lead"> Coming Soon <i class="icon-heart3"></i> </p>
+                                    <h2 class="heading-title">Deals</h2>
+                                    <p class="fh5co-lead"><i class="icon-heart3"></i> </p>
                                 </div>
                             </div>
                         </div>
@@ -243,16 +241,16 @@
     </aside>
 
 
-
+ 
     <div id="fh5co-deals-section" class="fh5co-section-gray">
-        <div class="container">
+        <div class="container"><br><br><br><br><br>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
                     <h3>View Deals</h3>
                 </div>
             </div>
             <div class="calendar" id="dealList">
-            </div>
+            </div><br><br><br><br><br>
         </div>
     </div>
 
