--- a/Public/addC-Manager.html
+++ b/Public/addC-Manager.html
@@ -151,8 +151,7 @@
 				<div class="container">
 					<div class="nav-header">
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-						<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real
-									Estate</span></a></h1>
+						<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
 								<li class="active"><a href="HomeManager.html">Home</a></li>
@@ -160,14 +159,11 @@
 									<a>Assets</a>
 									<ul class="fh5co-sub-menu">
 										<li><a href="all-Manager.html">All</a></li>
-										<li><a href="filter-Manager.html">Filter</a></li>
 										<li><a href="addA-Manager.html">Add</a></li>
 										<li><a href="updateA-Manager.html">Update</a></li>
 									</ul>
 								</li>
-								<li><a href="users-Manager.html">Users</a></li>
 								<li><a href="addC-Manager.html">Customer</a></li>
-								<li><a href="blog-Manager.html">Blog</a></li>
 								<!-- New "Deals" tab containing "Deal" and "Deals View" links -->
 								<li>
 									<a>Deals</a>
@@ -176,7 +172,8 @@
 										<li><a href="DealsV-Manager.html">View Deals</a></li>
 									</ul>
 								</li>
-								<!-- End of "Deals" tab -->
+								<li><a href="blog-Manager.html">Blog</a></li>
+								<li><a href="users-Manager.html">Users</a></li>
 								<li>
 									<a>Meetings</a>
 									<ul class="fh5co-sub-menu">
@@ -199,8 +196,8 @@
 								<div class="row">
 									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 										<div class="slider-text-inner">
-											<h2 class="heading-title">New Customer</h2>
-											<p class="fh5co-lead"> Coming Soon <i class="icon-heart3"></i> </p>
+											<h2 class="heading-title">Customer</h2>
+											<p class="fh5co-lead"><i class="icon-heart3"></i> </p>
 										</div>
 									</div>
 								</div>
@@ -251,6 +248,7 @@
 		</div>
 	
 			<div id="fh5co-blog-section" class="fh5co-section-gray">
+				<div style="border-bottom: 5px solid rgb(255, 255, 255);"></div>
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
