--- a/Public/all-Manager.html
+++ b/Public/all-Manager.html
@@ -76,50 +76,59 @@
             color: red;
             font-weight: bold;
         }
+        .form-group {
+            display: flex;
+            align-items: center;
+        }
+    
+        .form-group input[type="text"] {
+            margin-left: -30px; /* Adjust this value as needed */
+        }
 
+        .form-group button[type="submit"] {
+        margin-top: 20px; /* Adjust this value to move the button down */
+    }
         
     </style>
-<header id="fh5co-header-section" class="sticky-banner">
-    <div class="container">
-        <div class="nav-header">
-            <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-            <h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
-            <nav id="fh5co-menu-wrap" role="navigation">
-                <ul class="sf-menu" id="fh5co-primary-menu">
-                    <li class="active"><a href="HomeManager.html">Home</a></li>
-                    <li>
-                        <a>Assets</a>
-                        <ul class="fh5co-sub-menu">
-                            <li><a href="all-Manager.html">All</a></li>
-                            <li><a href="filter-Manager.html">Filter</a></li>
-                            <li><a href="addA-Manager.html">Add</a></li>
-                            <li><a href="updateA-Manager.html">Update</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="users-Manager.html">Users</a></li>
-                    <li><a href="addC-Manager.html">Customer</a></li>
-                    <li><a href="blog-Manager.html">Blog</a></li>
-                    <!-- New "Deals" tab containing "Deal" and "Deals View" links -->
-                    <li>
-                        <a>Deals</a>
-                        <ul class="fh5co-sub-menu">
-                            <li><a href="addD-Manager.html">Add Deal</a></li>
-                            <li><a href="DealsV-Manager.html">View Deals</a></li>
-                        </ul>
-                    </li>
-                    <!-- End of "Deals" tab -->
-                    <li>
-                        <a>Meetings</a>
-                        <ul class="fh5co-sub-menu">
-                            <li><a href="meetingA-Manager.html">Add</a></li>
-                            <li><a href="meetingV-Manager.html">View</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
+	<header id="fh5co-header-section" class="sticky-banner">
+        <div class="container">
+            <div class="nav-header">
+                <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
+                <h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
+                <nav id="fh5co-menu-wrap" role="navigation">
+                    <ul class="sf-menu" id="fh5co-primary-menu">
+                        <li class="active"><a href="HomeManager.html">Home</a></li>
+                        <li>
+                            <a>Assets</a>
+                            <ul class="fh5co-sub-menu">
+                                <li><a href="all-Manager.html">All</a></li>
+                                <li><a href="addA-Manager.html">Add</a></li>
+                                <li><a href="updateA-Manager.html">Update</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="addC-Manager.html">Customer</a></li>
+                        <!-- New "Deals" tab containing "Deal" and "Deals View" links -->
+                        <li>
+                            <a>Deals</a>
+                            <ul class="fh5co-sub-menu">
+                                <li><a href="addD-Manager.html">Add Deal</a></li>
+                                <li><a href="DealsV-Manager.html">View Deals</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="blog-Manager.html">Blog</a></li>
+                        <li><a href="users-Manager.html">Users</a></li>
+                        <li>
+                            <a>Meetings</a>
+                            <ul class="fh5co-sub-menu">
+                                <li><a href="meetingA-Manager.html">Add</a></li>
+                                <li><a href="meetingV-Manager.html">View</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
-</header>
+    </header>
 
     <aside id="fh5co-hero" class="js-fullheight">
         <div class="flexslider js-fullheight">
@@ -131,7 +140,7 @@
                             <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
                                 <div class="slider-text-inner">
                                     <h2 class="heading-title">All our Assets</h2>
-                                    <p class="fh5co-lead">Coming Soon <i class="icon-heart3"></i>  </p>
+                                    <p class="fh5co-lead"><i class="icon-heart3"></i>  </p>
                                 </div>
                             </div>
                         </div>
