--- a/Public/blog-Customer.html
+++ b/Public/blog-Customer.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
  <html class="no-js">
 	<head>
 	<meta charset="utf-8">
@@ -9,10 +8,6 @@
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
-
-  
-
-  	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -22,13 +17,9 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
-
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300' rel='stylesheet' type='text/css'>
-	
-	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
@@ -188,6 +179,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }	
+
+
 </style>
 <body>
 	<div id="fh5co-wrapper">
@@ -279,7 +272,7 @@
 				</div>
 			</div>
 	
-
+			<div style="border-bottom: 5px solid rgb(255, 255, 255);"></div>
 		<div id="fh5co-blog-section" class="fh5co-section-gray">
             <div class="container">
                 <div class="row">
