--- a/Public/blog-Manager.html
+++ b/Public/blog-Manager.html
@@ -267,8 +267,7 @@
 				<div class="container">
 					<div class="nav-header">
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-						<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real
-									Estate</span></a></h1>
+						<h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
 								<li class="active"><a href="HomeManager.html">Home</a></li>
@@ -276,14 +275,11 @@
 									<a>Assets</a>
 									<ul class="fh5co-sub-menu">
 										<li><a href="all-Manager.html">All</a></li>
-										<li><a href="filter-Manager.html">Filter</a></li>
 										<li><a href="addA-Manager.html">Add</a></li>
 										<li><a href="updateA-Manager.html">Update</a></li>
 									</ul>
 								</li>
-								<li><a href="users-Manager.html">Users</a></li>
 								<li><a href="addC-Manager.html">Customer</a></li>
-								<li><a href="blog-Manager.html">Blog</a></li>
 								<!-- New "Deals" tab containing "Deal" and "Deals View" links -->
 								<li>
 									<a>Deals</a>
@@ -292,7 +288,8 @@
 										<li><a href="DealsV-Manager.html">View Deals</a></li>
 									</ul>
 								</li>
-								<!-- End of "Deals" tab -->
+								<li><a href="blog-Manager.html">Blog</a></li>
+								<li><a href="users-Manager.html">Users</a></li>
 								<li>
 									<a>Meetings</a>
 									<ul class="fh5co-sub-menu">
@@ -316,7 +313,7 @@
 									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 										<div class="slider-text-inner">
 											<h2 class="heading-title">Our Blog</h2>
-											<p class="fh5co-lead"> Coming Soon <i class="icon-heart3"></i> </p>
+											<p class="fh5co-lead"><i class="icon-heart3"></i> </p>
 										</div>
 									</div>
 
@@ -360,6 +357,7 @@
 
 					</div>
 				</div>
+				<div style="border-bottom: 5px solid rgb(255, 255, 255);"></div><br><br><br>
 				<div class="container" id="ratingsChartContainer">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
@@ -527,11 +525,11 @@
             new Chart(ratingsChartCanvas, {
                 type: 'bar',
                 data: {
-                    labels: ['1 Star', '2 Stars', '3 Stars', '4 Stars', '5 Stars'],
+                    labels: ['⭐', '⭐⭐', '⭐⭐⭐', '⭐⭐⭐⭐', '⭐⭐⭐⭐⭐'],
                     datasets: [{
                         label: 'Ratings Count',
                         data: [
-                            ratingsCount['1 stars'],
+                            ratingsCount['1 stars '],
                             ratingsCount['2 stars'],
                             ratingsCount['3 stars'],
                             ratingsCount['4 stars'],
