--- a/Public/users-Manager.html
+++ b/Public/users-Manager.html
@@ -167,14 +167,11 @@
                                 <a>Assets</a>
                                 <ul class="fh5co-sub-menu">
                                     <li><a href="all-Manager.html">All</a></li>
-                                    <li><a href="filter-Manager.html">Filter</a></li>
                                     <li><a href="addA-Manager.html">Add</a></li>
                                     <li><a href="updateA-Manager.html">Update</a></li>
                                 </ul>
                             </li>
-                            <li><a href="users-Manager.html">Users</a></li>
                             <li><a href="addC-Manager.html">Customer</a></li>
-                            <li><a href="blog-Manager.html">Blog</a></li>
                             <!-- New "Deals" tab containing "Deal" and "Deals View" links -->
                             <li>
                                 <a>Deals</a>
@@ -183,7 +180,8 @@
                                     <li><a href="DealsV-Manager.html">View Deals</a></li>
                                 </ul>
                             </li>
-                            <!-- End of "Deals" tab -->
+                            <li><a href="blog-Manager.html">Blog</a></li>
+                            <li><a href="users-Manager.html">Users</a></li>
                             <li>
                                 <a>Meetings</a>
                                 <ul class="fh5co-sub-menu">
@@ -207,7 +205,7 @@
                                 <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
                                     <div class="slider-text-inner">
                                         <h2 class="heading-title">Manager</h2>
-                                        <p class="fh5co-lead"> Coming Soon <i class="icon-heart3"></i> </p>
+                                        <p class="fh5co-lead"><i class="icon-heart3"></i> </p>
                                     </div>
                                 </div>
                             </div>
@@ -239,6 +237,7 @@
                     <div id="fh5co-blog-section" class="fh5co-section-gray">
                         <div class="container">
                             <div class="row">
+                                <div style="border-bottom: 5px solid rgb(255, 255, 255);"></div><br><br><br>
                                 <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
                                     <h3>Add New User</h3>
                                 </div>
