--- a/Public/new-Customer.html
+++ b/Public/new-Customer.html
@@ -78,7 +78,7 @@
 				   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 			   				<div class="slider-text-inner">
 		   						<h2 class="heading-title">Meeting</h2>
-		   						<p class="fh5co-lead"> Coming Soon <i class="icon-heart3"></i> </p>
+		   						<p class="fh5co-lead"><i class="icon-heart3"></i> </p>
 			   				</div>
 			   			</div>
 				   		</div>
