--- a/Public/DealsV-Manager.html
+++ b/Public/DealsV-Manager.html
@@ -177,6 +177,15 @@
         .btn1.btn1-default:active {
             border-color: transparent;
         }
+        #footer #fh5co-header-subscribe button {
+    position: absolute;
+    top: 20px;
+    right: -20px;
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    background: #de6277;
+    border: none;
+}
     </style>
 
 
