--- a/Public/addA-Manager.html
+++ b/Public/addA-Manager.html
@@ -66,6 +66,16 @@
     .property-button:hover {
         background-color: #d80f48;
     }
+    #footer #fh5co-header-subscribe button {
+    position: absolute;
+    top: 20px;
+    right: -20px;
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    background: #de6277;
+    border: none;
+}
+
 
 </style>
 
@@ -194,7 +204,7 @@
             </form><br><br><br><br>
         </div>
     </div>
-    </div>
+   
 
     <footer>
         <div id="footer">
@@ -254,7 +264,8 @@
             </div>
         </div>
     </footer>
-
+</div>
+</div>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         var form = document.getElementById("propertyForm");
