--- a/Public/blog-Customer.html
+++ b/Public/blog-Customer.html
@@ -180,7 +180,15 @@
     -moz-osx-font-smoothing: grayscale;
 }	
 
-
+#footer #fh5co-header-subscribe button {
+    position: absolute;
+    top: 20px;
+    right: -20px;
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    background: #de6277;
+    border: none;
+}
 </style>
 <body>
 	<div id="fh5co-wrapper">
@@ -342,7 +350,7 @@
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-3">
 							<h3 class="section-title">About Us</h3>
-							<p>We, Bar Michal and Nofer, information systems management students at the College of Management, own all the exclusive rights to this website <i class="icon-heart3"></i></p>
+							<p>We, Bar Michal and Nofar, information systems management students at the College of Management, own all the exclusive rights to this website <i class="icon-heart3"></i></p>
 						</div>
 						
 						<div class="col-md-3 col-md-push-1">
@@ -395,15 +403,8 @@
 			</div>
 		</footer>
 
-	
-
 	</div>
-	<!-- END fh5co-page -->
-
 	</div>
-	<!-- END fh5co-wrapper -->
-
-	<!-- jQuery -->
 
 <script>
 	
