--- a/Public/blog-Manager.html
+++ b/Public/blog-Manager.html
@@ -254,6 +254,15 @@
     padding-right: 20px;
 	padding-top: 10px;
   }
+  #footer #fh5co-header-subscribe button {
+    position: absolute;
+    top: 20px;
+    right: -20px;
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    background: #de6277;
+    border: none;
+}
 	</style>
 
 
@@ -529,7 +538,7 @@
                     datasets: [{
                         label: 'Ratings Count',
                         data: [
-                            ratingsCount['1 stars '],
+                            ratingsCount['1 stars'],
                             ratingsCount['2 stars'],
                             ratingsCount['3 stars'],
                             ratingsCount['4 stars'],
