--- a/Public/meeting-Customer.html
+++ b/Public/meeting-Customer.html
@@ -33,6 +33,17 @@
 
 
 </head>
+<style>
+	#footer #fh5co-header-subscribe button {
+    position: absolute;
+    top: 20px;
+    right: -20px;
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    background: #de6277;
+    border: none;
+}
+</style>
 <body>
 	<div id="fh5co-wrapper">
 	<div id="fh5co-page">
