--- a/Public/meetingA-Manager.html
+++ b/Public/meetingA-Manager.html
@@ -32,7 +32,17 @@
 	<link rel="stylesheet" href="css/style.css">
 
 	<script src="js/modernizr-2.6.2.min.js"></script>
-
+<style>
+	    #footer #fh5co-header-subscribe button {
+    position: absolute;
+    top: 20px;
+    right: -20px;
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    background: #de6277;
+    border: none;
+}
+</style>
 	<header id="fh5co-header-section" class="sticky-banner">
 		<div class="container">
 			<div class="nav-header">
