--- a/Public/users-Manager.html
+++ b/Public/users-Manager.html
@@ -147,7 +147,16 @@
 .fh5co-section-gray {
 		background: rgba(0, 0, 0, 0);
 	}
-        
+       
+    #footer #fh5co-header-subscribe button {
+    position: absolute;
+    top: 20px;
+    right: -20px;
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    background: #de6277;
+    border: none;
+}
  
     </style>
 
