--- a/Public/Home.html
+++ b/Public/Home.html
@@ -47,6 +47,11 @@
         .form-group button[type="submit"] {
         margin-top: 20px; /* Adjust this value to move the button down */
     }
+	@media (min-width: 768px) {
+    .col-sm-3 {
+        width: 50%;
+    }
+}
 
 	</style>
 	</head>
@@ -526,48 +531,48 @@
 
 	<script>
 		async function submitMessage() {
-		const Name = document.getElementById('Name').value;
-		const Email = document.getElementById('Email').value;
-		const Phone = document.getElementById('Phone').value;
-		const Message = document.getElementById('Message').value;
-	
-		const formData = {
-			Name: Name,
-			Email: Email,
-			Phone:Phone,
-			Message: Message
-		};
-	
-		fetch('/submitMessage', {
-			method: 'POST',
-			headers: {
-				'Content-Type': 'application/json'
-			},
-			body: JSON.stringify(formData)
-		})
-		.then(response => response.json())
-		.then(data => {
-			if (data.error) {
-				console.error('Error submitting message:', data.error);
-				alert('An error occurred while submitting message.');
-	
-			} else {
-				console.log('message submitted successfully:', data.message);
-				console.log('check');
-				alert(data.message);
-				
-				document.getElementById('Name').value = '';
-				document.getElementById('Email').value = '';
-				document.getElementById('Phone').value = '';
-				document.getElementById('Message').value = '';
-			}
-		})
-		.catch(error => {
-			console.error('Error submitting message:', error);
-			alert('An error occurred while submitting message.');
-		});
-	}
-	
+    const Name = document.getElementById('Name').value;
+    const Email = document.getElementById('Email').value;
+    const Phone = document.getElementById('Phone').value;
+    const Message = document.getElementById('Message').value;
+
+    const formData = {
+        Name: Name,
+        Email: Email,
+        Phone: Phone,
+        Message: Message
+    };
+
+    try {
+        const response = await fetch('/submitMessage', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(formData)
+        });
+        
+        const data = await response.json();
+        if (data.error) {
+            console.error('Error submitting message:', data.error);
+            alert('An error occurred while submitting message.');
+        } else {
+            console.log('Message submitted successfully:', data.message);
+            alert('Email sent successfully!');
+            console.log('check');
+
+            document.getElementById('Name').value = '';
+            document.getElementById('Email').value = '';
+            document.getElementById('Phone').value = '';
+            document.getElementById('Message').value = '';
+        }
+    } catch (error) {
+        console.error('Error submitting message:', error);
+        alert('An error occurred while submitting message.');
+    }
+}
+
+		
 	
 	</script>
 	   </body>
