--- a/Public/addC-Customer.html
+++ b/Public/addC-Customer.html
@@ -56,7 +56,15 @@
 	.fh5co-section-gray {
 		background: rgba(0, 0, 0, 0);
 	}
-
+	#footer #fh5co-header-subscribe button {
+    position: absolute;
+    top: 20px;
+    right: -20px;
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    background: #de6277;
+    border: none;
+}
 		</style>
 </head>
 
@@ -106,7 +114,7 @@
 								<div class="row">
 									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 										<div class="slider-text-inner">
-											<h2 class="heading-title">New Customer</h2>
+											<h2 class="heading-title">Join Us</h2>
 											<p class="fh5co-lead"><i class="icon-heart3"></i> </p>
 										</div>
 									</div>
@@ -123,7 +131,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-							<h3>Add New Customer</h3>
+							<h3>Join as a customer</h3>
 						</div>
 					</div>
 				</div>
