--- a/Public/addD-manager.html
+++ b/Public/addD-manager.html
@@ -66,6 +66,15 @@
     .property-button:hover {
         background-color: #d80f48;
     }
+    #footer #fh5co-header-subscribe button {
+    position: absolute;
+    top: 20px;
+    right: -20px;
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    background: #de6277;
+    border: none;
+}
 </style>
 
 </head>
